--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #808080;
+  background-color: #808080; /* 如果背景图片加载失败，将显示此背景颜色 */
+  background-image: url('image/hhh.jpg'); /* 添加此行来设置背景图片 */
+  background-size: cover; /* 背景图片将覆盖整个 body 元素 */
+  background-position: center; /* 背景图片将居中显示 */
+  background-repeat: no-repeat; /* 背景图片不会重复 */
   color: #00FF00;
   text-align: center;
   padding-top: 10%;
