--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,54 @@
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #808080; /* 如果背景图片加载失败，将显示此背景颜色 */
-  background-image: url('image/hhh.jpg'); /* 添加此行来设置背景图片 */
-  background-size: cover; /* 背景图片将覆盖整个 body 元素 */
-  background-position: center; /* 背景图片将居中显示 */
-  background-repeat: no-repeat; /* 背景图片不会重复 */
+  background-image: url('image/hhh.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top; /* 调整背景图片的位置 */
   color: #00FF00;
   text-align: center;
-  padding-top: 10%;
+  padding-top: 20%; /* 调整顶部填充以适应背景图片 */
 }
+
 #time {
   font-size: 2em;
   margin-top: 20px;
 }
+
 #welcome {
   margin-top: 20px;
   font-size: 1.5em;
 }
+
 #nav {
   position: fixed;
   top: 0;
   right: 0;
   padding: 10px;
 }
+
 #menu {
   cursor: pointer;
   display: inline-block;
 }
+
 .bar {
   background-color: #0000FF;
   height: 3px;
   width: 30px;
   margin: 6px 0;
 }
+
 #links {
   display: none;
   list-style-type: none;
   padding: 0;
 }
+
 #links li {
   margin-bottom: 10px;
 }
+
 #links a {
   color: #0000FF;
   text-decoration: none;
